--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  email_validator: ^3.0.0
   flutter_riverpod: ^2.6.1
   hooks_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   google_fonts: ^4.0.1
+  local_auth: ^2.3.0
   shared_preferences: ^2.2.2
   flutter_hooks: ^0.20.5
   equatable: ^2.0.5
   go_router: ^13.2.2
   easy_sidemenu: ^0.6.0
   path_provider_android: ^2.0.16
+  flutter_screenutil: ^5.9.3
+  flutter_keyboard_visibility: ^6.0.0
+  intl_phone_number_input: ^0.7.4
+  sms_autofill: ^2.4.1
 
 dev_dependencies:
   flutter_test:
